# charx

./: .cz.toml  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .releaserc.yml  .secrets.baseline  .vale.ini  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  about.toml  licenses_report.json  licenses_report.md
.github/workflows/: audit.yaml  ci.yaml  code_coverage.yaml  get_next_version.yaml  release.yaml  release_upload.yaml
meta/: LICENSE-HEADER  licenses.hbs
scripts/: build.sh  generate_about_json.sh  generate_about_md.sh
src/: lib.rs
