# SPDX-FileCopyrightText: 2022 - 2024 Ali Sajid Imami
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "charx"
description = "A replacement for char::is_ascii*"
version ="1.0.2"
edition = "2021"
license = "0BSD"
readme = "README.md"
rust-version = "1.59.0"
repository = "https://github.com/AliSajid/charx"

[lib]
name = "charx"
path = "src/lib.rs"
crate-type = ["staticlib", "dylib", "lib"]

[dependencies]

[build]
jobs = 1
incremental = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
strip = true
overflow-checks = true
lto = true
